deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netstat-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netstat-ui
  template:
    metadata:
      labels:
        app: netstat-ui
    spec:
      serviceAccountName: netstat-ui
      enableServiceLinks: false
      imagePullSecrets:
        - name: regcred
      containers:
        - name: netstat-ui
          image: netstat-ui
          ports:
            - containerPort: 3001
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: netstat-ui
  labels:
    app: netstat-ui
spec:
  selector:
    app: netstat-ui
  ports:
  - protocol: TCP
    port: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.codemowers.ee
    kubernetes.io/ingress.class: shared
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - "*.codemowers.ee"
  rules:
    - host: "arch.codemowers.ee"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: netstat-ui
                port:
                  number: 3001
